# portfolio

./: .env  docker-compose.yml
backend/: Dockerfile  prestart.sh  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: certificates.py  education.py  experience_highlights.py  login.py  projects.py  skill_categories.py  skills.py  users.py  work_experiences.py
backend/app/core/: config.py  db.py
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.server.ts  app.routes.ts  app.ts  types.ts
frontend/src/app/auth/login-page/: login-page.css  login-page.html  login-page.ts
frontend/src/app/core/: theme.service.ts
frontend/src/app/core/services/: auth.interceptor.ts  auth.ts  master.ts
frontend/src/app/portfolio/portfolio-shell/: portfolio-shell.css  portfolio-shell.html  portfolio-shell.ts
frontend/src/app/sections/about/: about.css  about.html  about.ts
frontend/src/app/sections/certificates/: certificates.css  certificates.html  certificates.ts
frontend/src/app/sections/contact/: contact.css  contact.html  contact.ts
frontend/src/app/sections/education/: education.css  education.html  education.ts
frontend/src/app/sections/experience/: experience.css  experience.html  experience.ts
frontend/src/app/sections/footer/: footer.css  footer.html  footer.ts
frontend/src/app/shared/: hide-broken-image.directive.ts
frontend/src/environments/: environment.ts
(+13 files in other folders)
